# SAE-Module4-CityBuilder

./: CMakeLists.txt  README.md  main.cc  vcpkg.json
Profiling/: 2026-06-24_100npc_astar-after-opt.tracy  2026-06-24_100npc_astar-before-opt.tracy
api/: CMakeLists.txt
api/include/ai/: a_star_node.h  a_start_graph.h  npc.h  npc_manager.h
api/include/building/: building_resource.h  building_ui_card.h
api/include/camera/: camera.h
api/include/graphics/: tilemap_renderer.h  tilesheet.h
api/include/menu/: build_menu.h  button.h  menu.h
api/include/motion/: motor.h
api/include/resource/: resource.h  resource_manager.h
api/include/saver/: saver.h
api/include/utils/: utils.h
api/src/ai/: a_start_graph.cc  npc.cc  npc_manager.cc
api/src/building/: building_resource.cc  building_ui_card.cc
api/src/camera/: camera.cc
api/src/graphics/: tilemap_renderer.cc
api/src/menu/: build_menu.cc  button.cc  menu.cc
api/src/resource/: resource.cc  resource_manager.cc
api/src/saver/: saver.cc
core/: CMakeLists.txt
core/include/: ActionCode.h  DataUtils.h  biome.h  data_utils.h  event.h
core/include/ai/: bt_action.h  bt_composite.h  bt_node.h  bt_node_factory.h  bt_selector.h  bt_sequence.h
game/: CMakeLists.txt
game/include/: biome.h  game.h  tilemap.h
game/src/: game.cc  tilemap.cc
